--- a/AIMAE/src/main/webapp/html/admin.html
+++ b/AIMAE/src/main/webapp/html/admin.html
@@ -18,7 +18,7 @@
     <!-- Header -->
     <div class="header">
         <div class="brand">
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span style="margin-left: 10px;">AIMAE</span>
             </a>
         </div>
