--- a/AIMAE/src/main/webapp/html/copy.html
+++ b/AIMAE/src/main/webapp/html/copy.html
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-    <a href="index.html" class="logo">
+    <a href="../index.html" class="logo">
         <span style="margin-left: 10px;">AIMAE</span>
     </a>
     
