--- a/AIMAE/src/main/webapp/html/findID.html
+++ b/AIMAE/src/main/webapp/html/findID.html
@@ -29,7 +29,7 @@
         <div class="login-container">
             
             <div class="login-header">
-                <h1 class="login-logo"><a href="index.html" class="logo">AIMAE</a></h1>
+                <h1 class="login-logo"><a href="../index.html" class="logo">AIMAE</a></h1>
                 <h1 class="login-logo" style="margin-top: 1.45rem !important; font-size: 20px !important;">아이디 찾기</h1>
             </div>
 
