--- a/AIMAE/src/main/webapp/html/login.html
+++ b/AIMAE/src/main/webapp/html/login.html
@@ -27,7 +27,7 @@
 
         <div class="login-container">
 
-            <h1 class="login-logo"><a href="index.html" class="logo">AIMAE</a></h1>
+            <h1 class="login-logo"><a href="../index.html" class="logo">AIMAE</a></h1>
 
             <form action="" method="">
                 <div class="login-form">
