--- a/AIMAE/src/main/webapp/html/myPage.html
+++ b/AIMAE/src/main/webapp/html/myPage.html
@@ -32,7 +32,7 @@
                     <a href="#">카테고리 4</a>
                 </div>
             </div>
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span style="margin-left: 10px;">AIMAE</span>
             </a>
         </div>
