--- a/AIMAE/src/main/webapp/index.html
+++ b/AIMAE/src/main/webapp/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" href="images/favicon.ico" sizes="52x52" type="image/png">
 
     <!-- Style -->
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
@@ -46,13 +46,13 @@
 
         <div class="nav">
             <ul class="nav-ul">
-                <li><a href="login.html" class="link">로그인</a></li>
-                <li><a href="join.html" class="link">회원가입</a></li>
-                <li><a href="cart.html" class="link">장바구니</a></li>
+                <li><a href="html/login.html" class="link">로그인</a></li>
+                <li><a href="html/join.html" class="link">회원가입</a></li>
+                <li><a href="html/cart.html" class="link">장바구니</a></li>
                 <li><a href="#" class="link">고객센터</a></li>
             </ul>
             
-            <button class="login-btn" onclick="location.href='myPage.html'">마이페이지</button>
+            <button class="login-btn" onclick="location.href='html/myPage.html'">마이페이지</button>
         </div>
 
     </div>
@@ -112,8 +112,8 @@
     </div>
 
     <div class="content-box-img">
-        <img class="content-img" src="../images/freedelivery.png">
-        <img class="content-img" src="../images/freedelivery2.png">
+        <img class="content-img" src="images/freedelivery.png">
+        <img class="content-img" src="images/freedelivery2.png">
     </div>
 
     <!-- Footer -->
@@ -155,7 +155,7 @@
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 
     <!-- 슬라이드 -->
     <script>
