--- a/AIMAE/src/main/webapp/html/cart.html
+++ b/AIMAE/src/main/webapp/html/cart.html
@@ -37,7 +37,7 @@
 
       </div>
 
-      <a href="index.html" class="logo">
+      <a href="../index.html" class="logo">
         <span style="margin-left: 10px;">AIMAE</span>
       </a>
       
