--- a/AIMAE/src/main/webapp/html/payment.html
+++ b/AIMAE/src/main/webapp/html/payment.html
@@ -39,7 +39,7 @@
 
             </div>
 
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span style="margin-left: 10px;">AIMAE</span>
             </a>
             
