--- a/AIMAE/src/main/webapp/html/recom.html
+++ b/AIMAE/src/main/webapp/html/recom.html
@@ -6,12 +6,12 @@
     <title>AIMAE</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" sizes="256x256">
+    <link rel="icon" href="../images/favicon.ico" sizes="256x256">
 
     <!-- Style -->
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
@@ -38,7 +38,7 @@
 
             </div>
 
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span style="margin-left: 10px;">AIMAE</span>
             </a>
             
@@ -46,12 +46,12 @@
 
         <div class="nav">
             <ul class="nav-ul">
-                <li><a href="html/login.html" class="link">로그인</a></li>
-                <li><a href="html/join.html" class="link">회원가입</a></li>
+                <li><a href="login.html" class="link">로그인</a></li>
+                <li><a href="join.html" class="link">회원가입</a></li>
                 <li><a href="#" class="link">고객센터</a></li>
             </ul>
             
-            <button class="login-btn" onclick="location.href='html/myPage.html'">마이페이지</button>
+            <button class="login-btn" onclick="location.href='myPage.html'">마이페이지</button>
         </div>
 
     </div>
