--- a/AIMAE/src/main/webapp/html/join.html
+++ b/AIMAE/src/main/webapp/html/join.html
@@ -67,7 +67,7 @@
                             <input id="username" type="text" name="" value="" placeholder="이름을 입력해주세요." style="width: 23.3rem;">
                         </div>
 
-                        <label for="tel1">전화번호</label>
+                        <label for="tell">전화번호</label>
                         <div class="form-input-join" style="align-items: center;">
                             <input id="tel1" type="text" name="" value="" maxlength="3"> <a>-</a>
                             <input id="tel2" type="text" name="" value="" maxlength="4"> <a>-</a>
