--- a/AIMAE/src/main/webapp/html/login.html
+++ b/AIMAE/src/main/webapp/html/login.html
@@ -29,10 +29,10 @@
 
             <h1 class="login-logo"><a href="../index.html" class="logo">AIMAE</a></h1>
 
-            <form action="" method="">
+            <form action="/AimaeLoginService" method="post">
                 <div class="login-form">
-                    <input style="width: 22.9rem !important;" type="text" name="username" placeholder="아이디를 입력해주세요.">
-                    <input style="width: 22.9rem !important;" type="password" name="password" placeholder="비밀번호를 입력해주세요.">
+                    <input style="width: 22.9rem !important;" type="text" name="userId" placeholder="아이디를 입력해주세요.">
+                    <input style="width: 22.9rem !important;" type="password" name="UserPw" placeholder="비밀번호를 입력해주세요.">
                     <button type="submit">로그인</button>
                 </div>
 
