--- a/AIMAE/src/main/webapp/html/join.html
+++ b/AIMAE/src/main/webapp/html/join.html
@@ -34,16 +34,16 @@
             </div>
 
                 <div class="login-form">
-                    <form>
+                    <form action="/AIMAE/JoinService" method="post">
                         <label for="userId">아이디</label>
                         <div class="form-input-join">
-                            <input id="userId" type="text" name="" value="" placeholder="아이디를 입력해주세요." style="width: 17.17rem;">
+                            <input id="userId" type="text" name="UserId" value="" placeholder="아이디를 입력해주세요." style="width: 17.17rem;">
                             <button type="button" onclick="">중복 확인</button>
                         </div>
 
                         <label for="userPw">비밀번호</label> <a style="color: #8c52ff; margin-left: 1rem;">12자리 까지 입력가능합니다.</a>
                         <div class="form-input-join">
-                            <input id="userPw" type="password" name="" value="" placeholder="비밀번호를 입력해주세요." style="width: 23.3rem;" maxlength="12">
+                            <input id="userPw" type="password" name="UserPw" value="" placeholder="비밀번호를 입력해주세요." style="width: 23.3rem;" maxlength="12">
                         </div>
 
                         <label for="userPw2">비밀번호 재확인</label> <a style="margin-left: 1rem;" id="checkPw"></a>
@@ -53,7 +53,7 @@
 
                         <label for="email">이메일</label>
                         <div class="form-input-join" style="display: flex;">
-                            <input id="email" type="text" name="" value="" placeholder="이메일을 입력해주세요.">
+                            <input id="email" type="text" name="Email" value="" placeholder="이메일을 입력해주세요.">
                             <button type="button" onclick="">인증번호 전송</button>
                         </div>
                         
@@ -64,24 +64,24 @@
 
                         <label for="username">이름</label>
                         <div class="form-input-join">
-                            <input id="username" type="text" name="" value="" placeholder="이름을 입력해주세요." style="width: 23.3rem;">
+                            <input id="username" type="text" name="UserName" value="" placeholder="이름을 입력해주세요." style="width: 23.3rem;">
                         </div>
 
                         <label for="tell">전화번호</label>
                         <div class="form-input-join" style="align-items: center;">
-                            <input id="tel1" type="text" name="" value="" maxlength="3"> <a>-</a>
-                            <input id="tel2" type="text" name="" value="" maxlength="4"> <a>-</a>
-                            <input id="tel3" type="text" name="" value="" maxlength="4">
+                            <input id="tel1" type="text" name="tel1" value="" maxlength="3"> <a>-</a>
+                            <input id="tel2" type="text" name="tel2" value="" maxlength="4"> <a>-</a>
+                            <input id="tel3" type="text" name="tel3" value="" maxlength="4">
                         </div>
                         
                         <label for="address">주소</label>
                         <div class="form-input-join">
-                            <input id="address" type="text" name="" value="" placeholder="주소를 입력해주세요." style="width: 23.3rem;">
+                            <input id="address" type="text" name="UserAddress" value="" placeholder="주소를 입력해주세요." style="width: 23.3rem;">
                         </div>
 
                         <label for="birthday">생년월일</label>
                         <div class="form-input-join">
-                            <input id="birthday" type="date" name="" value="" style="width: 23.3rem;">
+                            <input id="birthday" type="date" name="Birthday" value="" style="width: 23.3rem;">
                         </div>
 
                         <div class="join-button">
