--- a/AIMAE/src/main/webapp/html/index.html
+++ b/AIMAE/src/main/webapp/html/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <!-- Header -->
     <div class="header">
 
@@ -29,10 +30,9 @@
                 </button>
 
                 <div class="dropdown-content">
-                    <a href="#">카테고리 1</a>
-                    <a href="#">카테고리 2</a>
-                    <a href="#">카테고리 3</a>
-                    <a href="#">카테고리 4</a>
+                    <a href="html/fruitProducts.html">과일</a>
+                    <a href="html/vegetableProducts.html">채소</a>
+                    <a href="html/electronicProducts.html">전자제품</a>
                 </div>
 
             </div>
@@ -60,7 +60,7 @@
     <div class="content">
 
         <div>
-            <h1 class="animated-text" style="font-size: 45px;">당신의 고민을 대신 추천해주는 AI 쇼핑 도우미 <span class="logo2">' AIMAE '</span> 입니다.</h1>
+            <h1 class="animated-text" style="font-size: 36px;">당신의 고민을 대신 추천해주는 AI 쇼핑 도우미 <span class="logo2">' AIMAE '</span> 입니다.</h1>
         </div>
 
         <div class="content-text">
@@ -83,32 +83,112 @@
     </div>
 
     <!-- Content2 -->
+    <!-- 신상품 -->
+<div class="content-product">
+    <h2 class="section-header">🛍️ 신상품</h2>
+    <div class="product-slider">
 
-    <div class="content-product">
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="화이트닝 치약" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">화이트닝 치약</h3>
+                <p class="product-price">₩5,000</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
 
-        <h2 class="content-product-header">신상품</h2>
-        
-        <div class="product-slider" id="product-slider2">
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">1</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">2</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">3</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">4</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">5</a></div>
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="프리미엄 사과" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">프리미엄 사과</h3>
+                <p class="product-price">₩12,000</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="유기농 채소 세트" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">유기농 채소 세트</h3>
+                <p class="product-price">₩8,500</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="무선 이어폰" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">무선 이어폰</h3>
+                <p class="product-price">₩89,000</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="고급 커피 원두" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">고급 커피 원두</h3>
+                <p class="product-price">₩15,000</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<!-- 최근 구매순 -->
+<div class="content-product">
+    <h2 class="section-header">🔥 최근 구매순</h2>
+    <div class="product-slider">
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="천연샴푸" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">천연샴푸</h3>
+                <p class="product-price">₩9,900</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="프리미엄 키보드" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">프리미엄 키보드</h3>
+                <p class="product-price">₩59,000</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="블루베리" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">블루베리</h3>
+                <p class="product-price">₩6,500</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="에코백" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">에코백</h3>
+                <p class="product-price">₩7,000</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="images/favicon.ico" alt="비타민C" class="product-img">
+            <div class="product-info">
+                <h3 class="product-name">비타민C</h3>
+                <p class="product-price">₩11,000</p>
+                <button class="add-cart-btn"><i class="fas fa-shopping-cart"></i> 장바구니</button>
+            </div>
         </div>
     </div>
+</div>
 
-    <div class="content-product">
 
-        <h2 class="content-product-header">최근 구매순</h2>
-        
-        <div class="product-slider" id="product-slider2">
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">1</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">2</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">3</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">4</a></div>
-            <div class="product-list-box" id="product-list"><a href="#" class="list-pbox">5</a></div>
-        </div>
-    </div>
 
     <div class="content-box-img">
         <img class="content-img" src="images/freedelivery.png">
@@ -143,6 +223,9 @@
                     <a href="https://www.instagram.com/chan2hee1" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
+                <div>
+                    <img src="images/favicon.ico" alt="" style="width: 5rem;">
+                </div>
             </div>
         </div>
 
@@ -160,14 +243,25 @@
     <script>
         $(document).ready(function(){
             $('.product-slider').slick({
-                slidesToShow: 3,       // 한 번에 보여줄 개수
-                slidesToScroll: 3,     // 한번에 스크롤할 개수
-                arrows: true,          // < > 버튼
-                infinite: false,        // 무한 루프 여부 (원하는 대로)
+                slidesToShow: 3,
+                slidesToScroll: 1,       // 1씩 스크롤
+                arrows: true,
+                infinite: false,
                 prevArrow: '<button type="button" class="slick-prev"><i class="fa-solid fa-angle-left"></i></button>',
-                nextArrow: '<button type="button" class="slick-next"><i class="fa-solid fa-angle-right"></i></button>'
+                nextArrow: '<button type="button" class="slick-next"><i class="fa-solid fa-angle-right"></i></button>',
+                responsive: [
+                    {
+                        breakpoint: 1024,
+                        settings: { slidesToShow: 2 }
+                    },
+                    {
+                        breakpoint: 768,
+                        settings: { slidesToShow: 1 }
+                    }
+                ]
             });
         });
+
     </script>
 
     <!-- 드롭다운 -->
